# stack

./: CMakeLists.txt
include/: common.h
include/calc/: calc.h
include/dump/: dump.h
include/stack/: stack.h
include/verifier/: verifier.h
src/: main.cpp
src/calc/: calc.cpp
src/dump/: dump.cpp
src/stack/: stack.cpp
src/verifier/: verifier.cpp
